# rogue-example

./: .gitmodules  Makefile  README.md  setup_rce.csh  setup_template.csh
cpp_api/: CMakeLists.txt  README.md  setup.csh  setup.sh
cpp_api/scripts/: testApi.py
cpp_api/src/: api_local.cpp  api_remote.cpp
cpp_register_access/: CMakeLists.txt  README.md
cpp_register_access/src/: register_access.cpp
cpp_stream_receiver/: CMakeLists.txt
cpp_stream_receiver/src/: rssi_client_datarx.cpp  rssi_client_datatx.cpp  rssi_send.cpp  rssi_server_datatx.cpp  rssi_sink.cpp
custom_python_module/: CMakeLists.txt  README.md  setup.csh  setup.sh
custom_python_module/lib/: ExampleBridge.py  StreamModules.py
custom_python_module/scripts/: testMyModule.py
custom_python_module/src/: MyModule.cpp
epics_interface/: README.md  setup.csh  setup.sh
epics_interface/scripts/: testClient.py  testServer.py
example_devices/: README.md
file_writer_test/: README.md
file_writer_test/scripts/: fileTest.py  fileTestCompress.py  readTest.py
gui_and_scripts/: README.md  setup.csh  setup.sh
gui_and_scripts/scripts/: guiClient.py  scriptClient.py  scriptOnly.py  serverGui.py  serverOnly.py  startPyro4Ns.py
prbs_test/scripts/: rssiTest.py
python/rce/: RceCommon.py
rssi_cpp_receiver/: CMakeLists.txt  README.md
scripts/: compTest.py  emulate.py  evalBoard.py  evalBoardRssi.py  exoTest.py  fileTest.py  guiClient.py  localServer.py  lzExample.py  pyroClient.py  pyroGui.py  pyroLib.py  pyroTest.py  rceTest.py  regRateTest.py  rssiTest.py  scriptClient.py  scriptLocal.py  simTest.py  sinkTest.py  startPyro4Ns.py  testBridge.py
shared_mem_client/: CMakeLists.txt  README.md  setup.csh
shared_mem_client/scripts/: testSmem.py
shared_mem_client/src/: smem_test.cpp
src/: api_local.cpp  api_remote.cpp  rssi_sinc.cpp  smem_test.cpp
stream_testers/: README.md
stream_testers/scripts/: packetizerTest.py  packetizerTestV1.py  packetizerTestV2.py  prbsTest.py  rssiPacketizerV1.py  rssiPacketizerV2.py  rssiTest.py  udpPacketiverV1.py  udpPacketiverV2.py  udpPacketiverV2NoCheck.py
udp_packetizer_test/: README.md
udp_packetizer_test/scripts/: udpDataTest.py  udpPacketiverV1.py
